Jython NEWS

Jython 2.5.2b2
  Bugs Fixed
    - [ 1373 ] Jython ClassLoader getResource does not work
    - [ 1506 ] Jython applies PEP263 pattern for determining source-code encoding on noncomments
    - [ 1630 ] threading.Thread lacks __tojava__ method

Jython 2.5.2b1
  Bugs Fixed
    - [ 1614 ] minidom chunks the character input on multi-line values
    - [ 1615 ] Can't invoke Java method that takes a variable number of arguments with zero arguments
    - [ 1605 ] float preference over PyComplex as arg to __call__ breaks logic
    - [ 1586 ] weakref reference count leak when kwargs are used
    - [ 1601 ] Can't serialize PyCode object
    - [ 1551 ] Java objects cannot be copied by the copy module
    - [ 1375 ] XML SAX: attrs.get((None, 'attr')) gives NPE
    - [ 1488 ] sax JyInputSourceWrapper does not support unicode strings
    - [ 1510 ] minidom is not parsing comment information correctly
    - [ 1549 ] Wrapping an InputStream with a PyFile wrongly carries out line-ending translation.
    - [ 1583 ] xml.dom.Node.data returns bytestrings of decoded unicode
    - [ 1515 ] modjy sometimes adds None to the sys.path
    - [ 1507 ] modjy crashes if any query string parameters are not set with '='
    - [ 1473 ] modjy servlet doesn't import site-packages by default
    - [ 1474 ] modjy servlet doesn't call atexit handlers
    - [ 1225 ] socket.getservbyname/port() not yet supported
    - [ 1532 ] Cannot use docstring when defining class
    - [ 1530 ] BoolOp in multiple assign causes VerifyError
    - [ 1478 ] defaultdict & weakref.WeakKeyDictionary [TypeError: first argument must be callable]
    - [ 1487 ] Import of module with latin-1 chars fails on utf-8 file encoding
    - [ 1449 ] Ellipsis comparison different from Python 2.5 to Jython 2.5
    - [ 1493 ] tarfile.extractall() throws "AttributeError: 'module' object has no attribute 'chown'" when called by root
    - [ 1470 ] os.mkdir Errno difference from cpython